--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+javax.persistence.schema-generation.scripts.action=create
+javax.persistence.schema-generation.scripts.create-target=create.sql
+javax.persistence.schema-generation.create-source=metadata
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root@localhost:3306/spring_angular_heroes_db
